fix: change from className to class

--- a/apps/frontend/angular.json
+++ b/apps/frontend/angular.json
@@ -7,7 +7,9 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "standalone": true,
+          "skipTests": false
         }
       },
       "root": "",
@@ -92,9 +94,10 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/assets",
               {
                 "glob": "**/*",
-                "input": "src/assets",
+                "input": "public",
                 "output": "/"
               }
             ],
