--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
     "name": "eventos",
     "version": "1.0.0",
-    "private": "true",
+    "private": true,
     "scripts": {
         "dev": "run-p packages:* apps:*",
-        "apps:frontend": "cd apps/frontend && npm run dev",
+        "build": "run-s build:packages build:apps",
+        "build:apps": "run-p build:frontend build:backend",
+        "build:frontend": "cd apps/frontend && npm run build",
+        "build:backend": "cd apps/backend && npm run build",
+        "build:packages": "cd packages/core && npm run build",
+        "apps:frontend": "cd apps/frontend && npm run start",
         "apps:backend": "cd apps/backend && npm run start:dev",
-        "apps:mobile": "cd apps/mobile && npm run android",
         "packages:core": "cd packages/core && npm run dev"
     },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "description": "",
     "dependencies": {
         "npm-run-all": "^4.1.5"
     },
