--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,8 @@
     "types": "./dist/index.d.ts",
     "scripts": {
         "dev": "tsup src/index.ts --dts --watch",
-        "build": "tsup src/index.ts --dts --minify"
+        "build": "tsup src/index.ts --dts --minify",
+        "test": "jest --watchAll --collectCoverage"
     },
     "keywords": [],
     "author": "",
@@ -15,7 +16,10 @@
         "uuid": "^11.0.3"
     },
     "devDependencies": {
+        "@types/jest": "^29.5.14",
         "@types/uuid": "^10.0.0",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.2.5",
         "tsup": "^8.3.5",
         "typescript": "^5.7.2"
     }
