--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-server": "^19.0.3",
     "@angular/router": "^19.0.3",
     "@angular/ssr": "^19.0.4",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
