chore: configure strictNullChecks as false

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -4,6 +4,7 @@
       "cors",
       "jasmine"
     ],
+    "strictNullChecks": false,
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
