chore: set baseHref and deployUrl correctly to avoid absolute paths

--- a/apps/frontend/angular.json
+++ b/apps/frontend/angular.json
@@ -19,6 +19,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "baseHref": "./",
+            "deployUrl": "./",
             "allowedCommonJsDependencies": [
               "qrcode"
             ],
